fix center-align in mb

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,6 +652,7 @@ section {
 
 @media (max-width: 991px){
   #resume {margin-top: 400px;}
+  #hero {text-align: center;}
 }
 
 /*--------------------------------------------------------------
